--- a/gallery.html
+++ b/gallery.html
@@ -2,16 +2,19 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>Отправка файла на сервер</title>
+  <title>miniGallery</title>
+  <link rel="stylesheet" type="text/css" href="css/css.css">
  </head>
  <body>
 	<form class="frm1" method='post' action="#"  enctype='multipart/form-data'>
-		<input type='text' name='image'/>
-		<br />
-		<br />
-		<input type='submit' value='Отправить' />
+		<input type='text' name='image' id='innerData'/>
+		<input type='button' value='Отправить' onclick="funcInData()" />
 	</form>
 
+	<ul id="list">
+	</ul>
 
+
+<script type="text/javascript" src="js/JS.js"></script>
  </body>
 </html>
