--- a/gallery.html
+++ b/gallery.html
@@ -11,8 +11,8 @@
 		<input type='button' value='Отправить' onclick="funcInData()" />
 	</form>
 
-	<ul id="list">
-	</ul>
+	<div id="list">
+	</div>
 
 
 <script type="text/javascript" src="js/JS.js"></script>
