--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
  </head>
  <body>
 	<form class="frm1" method='post' action="#"  enctype='multipart/form-data'>
-		<input type='text' name='image' id='innerData'/>
+		<input type='text' name='image' id='innerData' onfocus="this.value=''"/>
 		<input type='button' value='Отправить' onclick="funcInData()" />
 	</form>
 
