--- a/gallery.html
+++ b/gallery.html
@@ -10,10 +10,10 @@
 		<input type='text' name='image' id='innerData' onfocus="this.value=''"/>
 		<input type='button' value='Отправить' onclick="funcInData()" />
 	</form>
-
-	<div id="list">
+	<div id="maxList">
+		<div id="list">
+		</div>
 	</div>
-
 
 <script type="text/javascript" src="js/JS.js"></script>
  </body>
