--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,7 @@
 	<div id="maxList">
 		<div id="list">
 		</div>
+		<div class="viewPic"></div>
 	</div>
 
 <script type="text/javascript" src="js/JS.js"></script>
