--- a/gallery.html
+++ b/gallery.html
@@ -11,11 +11,11 @@
 		<input type='button' value='Отправить' onclick="funcInData()" />
 	</form>
 	<div id="maxList">
-		<div id="list">
-		</div>
-		<div class="viewPic"></div>
+		<div id="list"></div>
 	</div>
-
+	<div id="viewPic">
+	<div id="viewPic2"></div>
+	</div>
 <script type="text/javascript" src="js/JS.js"></script>
  </body>
 </html>
