--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8">
   <title>miniGallery</title>
-  <link rel="stylesheet" type="text/css" href="css/css.css">
+  <link rel="stylesheet" type="text/css" href="css/cssGal.css">
  </head>
  <body>
 	<form class="frm1" method='post' action="#"  enctype='multipart/form-data'>
@@ -16,6 +16,6 @@
 	<div id="viewPic">
 	<div id="viewPic2"></div>
 	</div>
-<script type="text/javascript" src="js/JS.js"></script>
+<script type="text/javascript" src="js/JSGal.js"></script>
  </body>
 </html>
